# manufacturing_kpi_report

./: .gitignore  IMPROVEMENTS.md  LICENSE  README.md  config.yaml  index.html  main.py  pyproject.toml  requirements.txt
data/processed/: defect_rate_factory.csv  factory_kpis.csv  machine_kpis.csv  machines_clean.csv  monthly_kpis.csv  mtbf_mttr_machine.csv  operators_clean.csv  pareto.csv  shift_kpis.csv  shifts_clean.csv
data/raw/: factories.csv  production_lines.csv
data/sample/: README.md  defects.csv  downtime_events.csv  production_records.csv  quality_inspections.csv  sensor_readings.csv
docs/: architecture.md
notebooks/: 01_exploratory_analysis.ipynb
reports/excel/: manufacturing_kpi_report.xlsx
src/manufacturing_analytics/: __init__.py
src/manufacturing_analytics/dashboards/: __init__.py  plotly_dashboard.py
src/manufacturing_analytics/data_generation/: __init__.py  exporter.py  generator.py
src/manufacturing_analytics/data_processing/: __init__.py  cleaning.py
src/manufacturing_analytics/kpi/: __init__.py  calculations.py
src/manufacturing_analytics/reporting/: __init__.py  excel_report.py  pdf_report.py
src/manufacturing_analytics/utils/: __init__.py  config.py  logger.py  validators.py
src/manufacturing_analytics/visualization/: __init__.py  charts.py
tests/: conftest.py  test_cleaning.py  test_exporter_and_charts.py  test_generator.py  test_kpi.py  test_validators.py
